[gd_scene load_steps=4 format=3 uid="uid://dwgvat1usplle"]

[ext_resource type="Script" path="res://scripts/UI/inventory_display.gd" id="1_tdtq5"]
[ext_resource type="FontFile" uid="uid://mcparera0fjm" path="res://fonts/alagard_by_pix3m-d6awiwp.ttf" id="2_4fww1"]

[sub_resource type="LabelSettings" id="LabelSettings_qriai"]
font = ExtResource("2_4fww1")

[node name="InventoryDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdtq5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158472, 0.158472, 0.158472, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemList" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
stretch_mode = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_qriai")
horizontal_alignment = 1
vertical_alignment = 1
